reproduce earlier results in gradient reversal test notebook

--- a/notebooks/.vscode/settings.json
+++ b/notebooks/.vscode/settings.json
@@ -1,3 +1,7 @@
 {
-    "python.pythonPath": "/home/rv-hdoosterlinck/.conda/envs/rvai/bin/python"
+    "python.pythonPath": "/home/rv-hdoosterlinck/.conda/envs/rvai/bin/python",
+    "files.watcherExclude": {
+        "**/model_training/**": true,
+        "**/data/**": true,        
+    }
 }
